@@ -3,6 +3,7 @@ PostGIS 2.0.2
 
  * Bug Fixes *
 
+  - #2051, Fix excess of precision in ST_AsGeoJSON output
   - #2052, Fix buffer overflow in lwgeom_to_geojson
   - #2033, Fix adding a splitting point into a 2.5d topology 
   - #2025, Fix side location conflict at TopoGeo_AddLineString 
